--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,42 @@
 <!-- templates/base.html -->
 <!DOCTYPE html>
+{% load crispy_forms_tags %}
 <html>
 <head>
   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>{% block title %} Django Project Two {% endblock %}</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">My APP</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li>
+        <a class="nav-link" href="/">HOME <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">ABOUT</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/gallery">GALLERY</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/accounts/login/">LOGIN</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/accounts/signup/">SIGN UP</a>
+      </li>
+
+    </ul>
+  </div>
+</nav>
+
   <main>
     {% block content %}
     {% endblock %}
