--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,10 +3,12 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block content %}
+{% load crispy_forms_tags %}
+
   <h2>Sign up</h2>
   <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <button type="submit">Sign up</button>
       <p>Already have account?   <a href="{% url 'login' %}">login</a> </p>
   </form>
