--- a/templates/about.html
+++ b/templates/about.html
@@ -3,9 +3,27 @@
 {% block title %}About{% endblock %}
 
 {% block content %}
+<div class="text-center">
+<br>
+    <img src="http://worldartsme.com/images/business-person-clipart-1.jpg" class="img-rounded" alt="Person images">
+     <h2>Mr. Some Body</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    A accusantium autem deleniti distinctio earum eius,
+    eum ex facilis illo illum ipsum molestiae mollitia provident
+    quia quibusdam recusandae sit vel voluptates.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    A accusantium autem deleniti distinctio earum eius,
+    eum ex facilis illo illum ipsum molestiae mollitia provident
+    quia quibusdam recusandae sit vel voluptates.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    A accusantium autem deleniti distinctio earum eius,
+    eum ex facilis illo illum ipsum molestiae mollitia provident
+    quia quibusdam recusandae sit vel voluptates.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    A accusantium autem deleniti distinctio earum eius,
+    eum ex facilis illo illum ipsum molestiae mollitia provident
+    quia quibusdam recusandae sit vel voluptates.
+</p>
 
-<h2>About Me</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium autem deleniti distinctio earum eius, eum ex facilis illo illum ipsum molestiae mollitia provident quia quibusdam recusandae sit vel voluptates.</p>
 
+
+</div>
 
 {% endblock %}
