--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,16 @@
   <a href="{% url 'login' %}">login</a> or
   <a href="{% url 'signup' %}">Signup</a>
   </p>
+<div class="row">
+<div class="col-sm-6">
+  <br>  <br>  <br>  <br>
+  <br>
+  <h1 class="text-uppercase text-center">this is my homepage</h1>
+</div>
+<div class="col-sm-6">
+  <img width=80% class="mx-auto d-block"  src="https://www.istockphoto.com/resources/images/PhotoFTLP/img_46552314.jpg" alt="Picture could not load">
+</div>
+</div>
 
 {% endif %}
 {% endblock %}
