--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,11 +4,21 @@
 
 {% block content %}
 {% load crispy_forms_tags %}
-<h2>Login</h2>
+
+<div class="row">
+  <div class="col-sm-4"></div>
+  <div class="col-sm-4">
+
+    <h2 class="text-center">Login</h2>
 <form method="post">
   {% csrf_token %}
   {{ form|crispy}}
   <button type="submit">Login</button>
   <p><a href="{% url 'signup' %}">Signup</a></p>
 </form>
+
+  </div>
+</div>
+
+
 {% endblock %}
