--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,7 +14,7 @@
   {% csrf_token %}
   {{ form|crispy}}
   <button type="submit">Login</button>
-  <p><a href="{% url 'signup' %}">Signup</a></p>
+  <p>No account ? <a href="{% url 'signup' %}">create one</a></p>
 </form>
 
   </div>
